--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">SandBox</string>
     <string name="action_settings">Settings</string>
+    <string name="seleccione_barrio">Seleccione un barrio</string>
 
 </resources>
