--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SandBox</string>
+    <string name="app_name">MiLEEM</string>
     <string name="action_settings">Settings</string>
     <string name="seleccione_barrio">Seleccione un barrio</string>
     <string name="con_zonas">Incluir zonas aledañas</string>
+    <string name="advanced_search">Búsqueda Avanzada</string>
+    <string name="simple_search">Buscar</string>
+    <string name="dolar">U$S</string>
+    <string name="pero">$</string>
+    <string name="moneda">Moneda</string>
+    <string name="precio">Precio</string>
+    <string name="precio_desde">desde</string>
+    <string name="precio_hasta">hasta</string>
+    <string name="distribucion">Distribución</string>
 
 </resources>
