Migracion de package

--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+  <string name="app_version">v0.1</string>
     <string name="app_name">MiLEEM</string>
     <string name="dummy">dummy</string>
     <string name="action_settings">Settings</string>
@@ -15,13 +15,10 @@
     <string name="precio_desde">desde</string>
     <string name="precio_hasta">hasta</string>
     <string name="a_estrenar">A estrenar</string>
-    <string name="sup_total">Superficie total</string>
-    <string name="sup_cubierta">Superficie cubierta</string>
-    <string name="sup_unidad">m2</string>
-    <string name="antiguedad">Antiguedad</string>
-    <string name="antiguedad_unidad">años</string>
-    <string name="expensas">Expensas</string>
-    <string name="expensas_unidad">$</string>
+    <string name="sup_total">Superficie total (m2)</string>
+    <string name="sup_cubierta">Superficie cubierta (m2)</string>
+    <string name="antiguedad">Antiguedad (años)</string>
+    <string name="expensas">Expensas ($)</string>
     <string name="distribucion">Distribución</string>
     <string name="upp_si">SI</string>
     <string name="upp_no">NO</string>
@@ -29,6 +26,7 @@
     <string name="caracteristicas_generales">Características generales</string>
     <string name="cant_ambientes">Ambientes</string>
     <string name="mas_de">mas de</string>
+    <string name="menos_de">menos de</string>
     <string name="banos">Baños</string>
     <string name="balcon">Con balcón</string>
     <string name="en_suite">Dormitorio en suite</string>
