Cambios en el sort, envio timestamp, offset.

--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="en_suite">Dormitorio en suite</string>
     <string name="ver_estadisticas">Ver estadísticas</string>
     <string name="ordenar_por">Ordenar por</string>
-    <string name="cargar_mas">Cargar mas resultados</string>
+    <string name="cargar_mas">Recargar todo</string>
     <string name="sort_destacadas">Destacadas</string>
     <string name="sort_precio_menor">Menor Precio</string>
     <string name="sort_precio_mayor">Mayor Precio</string>
