Handler de Errores de Internet. Ejemplo Modelo Publicacion

--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="sort_precio_menor">Menor Precio</string>
     <string name="sort_precio_mayor">Mayor Precio</string>
     <string name="sort_recientes">Más Recientes</string>
-
+	<string name="cerrar_btn">Cerrar</string>
+	<string name="ok_btn">OK</string>
+	<string name="oops">Oops! algo anda mal</string>
+	<string name="connection_error">Hay problemas con su conexión de internet, , por favor intente de nuevo más tarde.</string>
 </resources>
