Corecciones de textos y arte del popup.

--- a/SandBox/res/values/strings.xml
+++ b/SandBox/res/values/strings.xml
@@ -40,5 +40,5 @@
 	<string name="cerrar_btn">Cerrar</string>
 	<string name="ok_btn">OK</string>
 	<string name="oops">Oops! algo anda mal</string>
-	<string name="connection_error">Hay problemas con su conexión de internet, , por favor intente de nuevo más tarde.</string>
+	<string name="connection_error">Hay problemas con su conexión de internet, por favor intente de nuevo más tarde.</string>
 </resources>
